--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "exclude": [
-    "test/**/*.ts"
+    "test/**/*.ts",
+    "./dist"
   ],
   "compilerOptions": {
     "rootDir": "src"
